Agregado de imagenes

--- a/paginas/manosalaobra.html
+++ b/paginas/manosalaobra.html
@@ -27,6 +27,11 @@
         <h1>Manos a la obra!</h1>
         <p>¡Bienvenido a nuestra página “Manos a la obra”! Aquí, aprenderás más sobre cómo hemos puesto en práctica la
             teoría.</p>
+        <div class="imagenes">
+            <img src="../imagenes/web y html.png" alt="Manos a la obra de web y html" />
+            <img src="../imagenes/css.png" alt="Manos a la obra de css" />
+            <img src="../imagenes/JavaScript.png" alt="Manos a la obra de JavaScript" />
+        </div>
     </div>
     <script src="../interaccion/script.js"></script>
 </body>
