Se ha agregado video y semántica en el html

--- a/mi-primer-website.html
+++ b/mi-primer-website.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="container-nav">
+    <script src="./interaccion/script.js"></script>
+    <header class="container-nav">
         <nav class="navbar" role="navigation">
             <a href="#" class="brand">Mi página web</a>
             <ul class="nav-links">
@@ -22,28 +23,32 @@
             </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
-    </div>
-    <div class="container">
-        <h1>Bienvenidos a mi primer Website!</h1>
-        <div class="row">
-            <div class="column">
-                <h2>Presentación</h2>
-                <p id="p1">Soy Lucrecia, ¡y esta es mi primera página web!</p>
+    </header>
+    <main class="container">
+        <h1>Bienvenidos a mi primer Website</h1>
+        <section>
+            <h2>Presentación</h2>
+            <p>Soy Lucrecia, ¡y esta es mi primera página web!</p>
+            <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
+        </section>
+        <section>
+            <h2>Lo que se viene...</h2>
+            <p>
+                A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. Estos lenguajes me ayudarán a crear
+                una base sólida en el desarrollo web front-end.
+            </p>
+            <h2>Lo que me gusta escuchar mientras estudio</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nRmKzEd11Ak"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </section>
+    </main>
+    <footer>
+        <p>Footer</p>
+        <button onclick="showAlert()" aria-label="Haz clic en mí">Haz clic en mí!</button>
 
-                <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
-            </div>
-            <div class="column">
-                <h2>Lo que se viene...</h2>
-                <p>A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. Estos lenguajes me ayudarán a
-                    crear una base
-                    sólida en el desarrollo web front-end. </p>
-            </div>
-        </div>
-        <button onclick="showAlert()">Haz clic en mí!</button>
-    </div>
-
-    <script src="./interaccion/script.js"></script>
-
+    </footer>
 </body>
 
 </html>
