--- a/paginas/desafios.html
+++ b/paginas/desafios.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <nav class="navbar" role="navigation">
-        <nav class="navbar">
+    <div class="container-nav">
+        <nav class="navbar" role="navigation">
             <a href="#" class="brand">Mi página web</a>
             <ul class="nav-links">
                 <li><a href="../mi-primer-website.html">Home</a></li>
@@ -22,17 +22,17 @@
             </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
-        </div>
-        <div class="container">
-            <h1>Nuestros servicios</h1>
-            <p>Descubre aquí los desafíos que he tenido.</p>
-            <ul>
-                <li>Desafío 1</li>
-                <li>Desafío 2</li>
-                <li>Desafío 3</li>
-            </ul>
-        </div>
-        <script src="../interaccion/script.js"></script>
+    </div>
+    <div class="container">
+        <h1>Desafíos del día</h1>
+        <p>Descubre aquí los desafíos que he tenido.</p>
+        <ul>
+            <li>Desafío 1</li>
+            <li>Desafío 2</li>
+            <li>Desafío 3</li>
+        </ul>
+    </div>
+    <script src="../interaccion/script.js"></script>
 </body>
 
 </html>
