--- a/paginas/manosalaobra.html
+++ b/paginas/manosalaobra.html
@@ -27,6 +27,8 @@
         <h1>Manos a la obra!</h1>
         <p>¡Bienvenido a nuestra página “Manos a la obra”! Aquí, aprenderás más sobre cómo hemos puesto en práctica la
             teoría.</p>
+        <p>Cada día, para incorporar mejor la teoría dada, tenemos una instancia en la que probamos los conceptos, esto
+            ha sido de mucha ayuda par ganar confianza al enfrentarnos a nuevos temas.</p>
         <div class="imagenes">
             <img src="../imagenes/web y html.png" alt="Manos a la obra de web y html" />
             <img src="../imagenes/css.png" alt="Manos a la obra de css" />
