--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <nav class="navbar" role="navigation">
-        <nav class="navbar">
+    <div class="container-nav">
+        <nav class="navbar" role="navigation">
             <a href="#" class="brand">Mi página web</a>
             <ul class="nav-links">
                 <li><a href="../mi-primer-website.html">Home</a></li>
@@ -22,17 +22,17 @@
             </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
-        </div>
-        <div class="container">
-            <h1>Contacto</h1>
-            <p>¡Contáctanos para cualquier consulta o solicitud de información!</p>
-            <form>
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" name="email" required>
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
-        <script src="../interaccion/script.js"></script>
+    </div>
+    <div class="container">
+        <h1>Contacto</h1>
+        <p>¡Contáctanos para cualquier consulta o solicitud de información!</p>
+        <form>
+            <label for="email">Correo electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+    <script src="../interaccion/script.js"></script>
 </body>
 
 </html>
