Se cambio el nombre a Index.html

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,7 +14,7 @@
         <nav class="navbar" role="navigation">
             <a href="#" class="brand">Mi página web</a>
             <ul class="nav-links">
-                <li><a href="../mi-primer-website.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="manosalaobra.html">Manos a la obra</a></li>
                 <li><a href="desafios.html">Desafíos</a></li>
                 <li><a href="practicas.html">Prácticas</a></li>
