--- a/Index.html
+++ b/Index.html
@@ -26,15 +26,18 @@
     </header>
     <main class="container">
         <h1>Bienvenidos a mi primer Website</h1>
-        <section>
-            <h2>Presentación</h2>
-            <p>Soy Lucrecia, ¡y esta es mi primera página web!</p>
-            <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
+        <section class="row">
+            <div class="column">
+                <h2>Presentación</h2>
+                <p id="p1">Soy Lucrecia, ¡y esta es mi primera página web!</p>
+                <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
+            </div>
         </section>
-        <section>
+        <section class="column">
             <h2>Lo que se viene...</h2>
             <p>
-                A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. Estos lenguajes me ayudarán a crear
+                A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. Estos lenguajes me ayudarán a
+                crear
                 una base sólida en el desarrollo web front-end.
             </p>
             <h2>Lo que me gusta escuchar mientras estudio</h2>
@@ -42,6 +45,7 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
+
         </section>
     </main>
     <footer>
