--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,9 +12,8 @@
 <body>
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-            <a href="#" class="brand">Mi página web</a>
+            <a href="../index.html" class="brand">HOME</a>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
                 <li><a href="manosalaobra.html">Manos a la obra</a></li>
                 <li><a href="desafios.html">Desafíos</a></li>
                 <li><a href="practicas.html">Prácticas</a></li>
@@ -25,7 +24,7 @@
     </div>
     <div class="container">
         <h1>Contacto</h1>
-        <p>¡Contáctanos para cualquier consulta o solicitud de información!</p>
+        <p>¡Me gustaría recibir tu feedback!</p>
         <form>
             <label for="email">Correo electrónico:</label>
             <input type="email" id="email" name="email" required>
