--- a/paginas/desafios.html
+++ b/paginas/desafios.html
@@ -12,9 +12,8 @@
 <body>
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-            <a href="#" class="brand">Mi página web</a>
+            <a href="../index.html" class="brand">HOME</a>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
                 <li><a href="manosalaobra.html">Manos a la obra</a></li>
                 <li><a href="#">Desafíos</a></li>
                 <li><a href="practicas.html">Prácticas</a></li>
